[gd_scene load_steps=11 format=3 uid="uid://dv2y18ye8j7o0"]

[ext_resource type="Script" uid="uid://k5f271qgai2d" path="res://scenes/main_menu_scene.gd" id="1_1foie"]
[ext_resource type="PackedScene" uid="uid://bej21vmdia824" path="res://scenes/difficulty_selection_scene.tscn" id="2_diff"]
[ext_resource type="PackedScene" uid="uid://g4qhvbvdm62w" path="res://scenes/game_settings_scene.tscn" id="3_dgs4d"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="3_kf1us"]
[ext_resource type="Theme" uid="uid://d22mpqutkotsu" path="res://ui/theme.tres" id="4_6ad1t"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/game_logo.tscn" id="4_fnufg"]
[ext_resource type="PackedScene" uid="uid://wnx76snk3gsv" path="res://scenes/game_credits_scene.tscn" id="4_wbyn4"]
[ext_resource type="Texture2D" uid="uid://q8fiid6qy1x0" path="res://assets/main_menu.png" id="6_pe0bh"]
[ext_resource type="AudioStream" uid="uid://d4k7aggoegl6x" path="res://assets/Sounds/SFX/UIHover.mp3" id="9_pw2k5"]
[ext_resource type="AudioStream" uid="uid://djbgioq2j2lud" path="res://assets/Sounds/SFX/UIPress.mp3" id="10_pe0bh"]

[node name="MainMenuScene" type="Node2D"]
script = ExtResource("1_1foie")
difficulty_scene = ExtResource("2_diff")
settings_scene = ExtResource("3_dgs4d")
credits_scene = ExtResource("4_wbyn4")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_top = 1.52406
offset_right = 577.0
offset_bottom = 327.476
theme = ExtResource("4_6ad1t")

[node name="CenterContainer2" type="CenterContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -164.5
offset_right = 287.5
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI/Control/CenterContainer2"]
layout_mode = 2
ratio = 1.3191

[node name="MainMenu" type="Sprite2D" parent="UI/Control/CenterContainer2/AspectRatioContainer"]
position = Vector2(4.00002, 1.49999)
scale = Vector2(0.305208, 0.300926)
texture = ExtResource("6_pe0bh")

[node name="CenterContainer" type="CenterContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -164.976
offset_right = 296.5
offset_bottom = 165.024
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="GameLogo" parent="UI/Control/CenterContainer" instance=ExtResource("4_fnufg")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Control"]
layout_mode = 2
offset_left = 66.0
offset_top = 165.476
offset_right = 345.0
offset_bottom = 297.476

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VSeparator2" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 99

[node name="NewGameButton" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "Start
"

[node name="VSeparator" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="VSeparator2" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 33

[node name="SettingsButton" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "settings"

[node name="VSeparator" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer2"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="VSeparator2" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="CreditsButton" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Credits"

[node name="VSeparator" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer3"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="UI/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33

[node name="ExitButton" type="Button" parent="UI/Control/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
text = "Exit"

[node name="VSeparator" type="VSeparator" parent="UI/Control/VBoxContainer/HBoxContainer4"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="FadeOverlay" parent="UI" instance=ExtResource("3_kf1us")]
unique_name_in_owner = true
visible = false

[node name="UiHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_pw2k5")
volume_db = -5.0
bus = &"Sound"

[node name="UiPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_pe0bh")
volume_db = -5.0
bus = &"Sound"
